# MavLinkDemo

./: .gitignore  build.gradle  gradle.properties  settings.gradle
DataBindingDataBoundRecyclerView/: build.gradle
RecyclerViewAnimations/: build.gradle
SimpleTransition/: build.gradle
SwipeRefreshMultipleViews/: build.gradle
app/: build.gradle
app/src/androidTest/java/me/oz/demo/mavlink/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  yuv420p2rgba.cpp
app/src/main/cpp/av/: CMakeLists.txt  av_utils.hpp  push_stream.cpp  push_stream.hpp  test.cpp  test.h
app/src/main/cpp/cv/: CMakeLists.txt  cv_utils.cpp  cv_utils.h  cv_utils_jni.cpp  test.cpp  test.h
app/src/main/cpp/event/: CMakeLists.txt  event_utils.cpp  event_utils.h
app/src/main/java/me/oz/demo/mavlink/: MainActivity.java  MainViewModel.java  NativeIntentActivity.java  PlayVideoWithBitmapActivity.java  ViewPager2Activity.java
app/src/main/java/me/oz/demo/mavlink/net/: NativeHttpClient.java
app/src/main/java/me/oz/demo/mavlink/ui/nativeintent/: NativeIntentFragment.java  NativeIntentViewModel.java
app/src/main/java/me/oz/demo/mavlink/ui/playvideowithbitmap/: PlayVideoWithBitmapFragment.java  PlayVideoWithBitmapViewModel.java
app/src/main/java/me/oz/demo/mavlink/ui/viewpager2/: ViewPager2Fragment.java  ViewPager2ViewModel.java
app/src/main/java/me/oz/demo/mavlink/utils/: CvUtils.java  ImageUtils.java  YUV2RGB.java
app/src/main/res/layout/: activity_main.xml  native_intent_activity.xml  native_intent_fragment.xml  play_video_with_bitmap_activity.xml  play_video_with_bitmap_fragment.xml  view_pager2_activity.xml  view_pager2_fragment.xml
app/src/main/res/values/: strings.xml
app/src/test/java/me/oz/demo/mavlink/: ExampleUnitTest.java
ffmpeg/: CMakeLists.txt  cmdutils.c  cmdutils.h  config.h  ffmpeg-exec-jni.cpp  ffmpeg-exec.h  ffmpeg.c
gradle/wrapper/: gradle-wrapper.properties
ui/: build.gradle
ui/src/androidTest/java/me/oz/demo/ui/: ExampleInstrumentedTest.java
ui/src/main/: AndroidManifest.xml
ui/src/main/java/me/oz/demo/ui/: DegreeView.java  MainActivity.java  MainActivity2.java
ui/src/main/java/me/oz/demo/ui/ui/adpater/: FragmentPageAdapter.java
ui/src/main/java/me/oz/demo/ui/ui/gallery/: AnimFragment.java  AnimViewModel.java  VectorAnimFragment.java  VectorFragment.java
ui/src/main/java/me/oz/demo/ui/ui/home/: ConstraintFragment.java  HomeViewModel.java
ui/src/main/java/me/oz/demo/ui/ui/send/: SendFragment.java  SendViewModel.java
ui/src/main/java/me/oz/demo/ui/ui/share/: ShareFragment.java  ShareViewModel.java
ui/src/main/java/me/oz/demo/ui/ui/slideshow/: SlideshowFragment.java  SlideshowViewModel.java
ui/src/main/java/me/oz/demo/ui/ui/tools/: ToolsFragment.java  ToolsViewModel.java
ui/src/main/java/me/oz/demo/ui/view/: DegreeView.java
ui/src/main/res/drawable/: bg_degree.xml
ui/src/main/res/layout/: activity_main.xml  activity_main_constraintset.xml  activity_main_helper.xml  activity_main_layer.xml  activity_main_motionlayout.xml  activity_sample.xml  app_bar_main3.xml  fragment_anim.xml  fragment_constraintlayout.xml  fragment_slideshow.xml
ui/src/main/res/menu/: activity_main3_drawer.xml
ui/src/main/res/navigation/: mobile_navigation.xml
ui/src/main/res/values/: attrs_degree_view.xml  strings.xml
ui/src/main/res/xml/: activity_main_states.xml
ui/src/test/java/me/oz/demo/ui/: ExampleUnitTest.java
viewpager2/: build.gradle
